--- a/css/styles.css
+++ b/css/styles.css
@@ -80,6 +80,9 @@ background-color: #576F72;
     display: none;
     
 }
+#experience{
+	background-color: #7D9D9C;
+}
 li.nav-item:hover{
     background-color:#576F72;
     border-radius: 10px;
@@ -145,5 +148,29 @@ background-color: #7D9D9C;
     z-index: 10;
     	-webkit-transform: scaleX(-1);
   transform: scaleX(-1);
+}
+
+
+.container {
+	width: 80%;
+	margin:0 auto;
+	overflow:auto;
+
+}
+.right-content, .left-content {
+	float:left;
+	display:block;
+	width:50%;
+	padding:1% 2%;
+}
+.left-content {
+	border-right:5px dotted #666;	
+	text-align:right;
+}
+.left-content p {
+	margin:150px 0 0;
+}
+.right-content p {
+	margin:80px 0 150px;
 }
 
