--- a/css/styles.css
+++ b/css/styles.css
@@ -8,7 +8,7 @@ body{
 #who{
 	padding-top: 8%;
 	padding-bottom: 10%;
-text-align: left;
+text-align: center;
 background-color: #576F72;
 
 }
@@ -134,11 +134,7 @@ background-color: #7D9D9C;
 	border-color: #576F72;
 	border-radius: 15px;
 }
-@media only screen and (max-width: 400px) {
-.robot{
-	width: 50px;
-}
-}
+
 .backbutntop{
 	width:50px;
 	font-size:12px;
@@ -173,4 +169,13 @@ background-color: #7D9D9C;
 .right-content p {
 	margin:80px 0 150px;
 }
+@media only screen and (max-width: 450px) {
+.robot{
+	width: 50px;
+}
+.col-sm-6 {
+width:250px;
+margin: auto;
+}
 
+}
